--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <html>
   <head>
     <title>Todo App</title>
@@ -10,8 +10,8 @@
       <img src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+    <div class="main-page">
+      <p id="adding-block">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task" class="task" type="text">
@@ -19,7 +19,7 @@
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incomplete-tasks">
+      <ul id="incompleted-tasks">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
@@ -29,13 +29,13 @@
             <img src="./remove.svg">
           </button>
         </li>
-        <li class="edit-mode"><input type="checkbox">
+        <li class="edit-mode">
+          <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
           <button class="edit">Save</button>
           <button class="delete">
-            <img
-              src="./remove.svg">
+            <img src="./remove.svg">
             </button>
         </li>
       </ul>
