--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   </head>
   <body class="body">
     <header class="header">
-      <img class="header-img" src="./eisenhower-matrix.jpg">
+      <img class="header-img" src="./eisenhower-matrix.jpg" alt="THE EISENHOWER MATRIX">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main-page">
       <section id="adding-block">
-        <label class="new-task" for="new-task">Add Item</label>
+        <h3 class="new-task" for="new-task">Add Item</h3>
         <div class="task-row-wrapper">
           <input id="new-task" class="task" type="text">
           <button class="button">Add</button>
@@ -27,7 +27,7 @@
             <input type="text" class="task">
             <button class="button edit">Edit</button>
             <button class="button delete">
-              <img class="delete-img" src="./remove.svg">
+              <img class="delete-img" src="./remove.svg" alt="delete-img">
             </button>
           </li>
           <li class="li edit-mode">
@@ -36,7 +36,7 @@
             <input type="text" value="Go Shopping" class="task">
             <button class="button edit">Save</button>
             <button class="button delete">
-              <img class="delete-img" src="./remove.svg">
+              <img class="delete-img" src="./remove.svg" alt="delete-img">
             </button>
           </li>
         </ul>
@@ -50,7 +50,7 @@
             <input type="text" class="task">
             <button class="button edit">Edit</button>
             <button class="button delete">
-              <img class="delete-img" src="./remove.svg">
+              <img class="delete-img" src="./remove.svg" alt="delete-img">
             </button>
           </li>
         </ul>
