--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html> -->
+<!DOCTYPE html>
 <html>
   <head>
     <title>Todo App</title>
@@ -7,50 +7,50 @@
   </head>
   <body class="body">
     <header class="header">
-      <img class="header-img" src="./eisenhower-matrix.jpg" alt="THE EISENHOWER MATRIX">
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="THE EISENHOWER MATRIX">
+      <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
-    <main class="main-page">
-      <section id="adding-block">
-        <h3 class="new-task" for="new-task">Add Item</h3>
-        <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text">
+    <main class="main">
+      <section class="section">
+        <h3 class="section__h3 section__h3_new">Add Item</h3>
+        <div class="section__wrapper">
+          <input class="task task_new-input" type="text">
           <button class="button">Add</button>
         </div>
       </section>
-      <section>
-        <h3 class="h3">Todo</h3>
-        <ul id="incompleted-tasks">
+      <section class="section">
+        <h3 class="section__h3">Todo</h3>
+        <ul class="ul ul_incompleted-tasks">
           <li class="li">
-            <input class="checkbox" type="checkbox">
-            <label class="task task-label">Pay Bills</label>
-            <input type="text" class="task">
-            <button class="button edit">Edit</button>
-            <button class="button delete">
-              <img class="delete-img" src="./remove.svg" alt="delete-img">
+            <input class="li__checkbox" type="checkbox">
+            <label class="task task_label">Pay Bills</label>
+            <input type="text" class="task task_input">
+            <button class="button button_edit">Edit</button>
+            <button class="button button_delete">
+              <img class="button__img" src="./remove.svg" alt="delete-img">
             </button>
           </li>
-          <li class="li edit-mode">
-            <input class="checkbox" type="checkbox">
-            <label class="task task-label">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
-            <button class="button edit">Save</button>
-            <button class="button delete">
-              <img class="delete-img" src="./remove.svg" alt="delete-img">
+          <li class="li li_edit-mode">
+            <input class="li__checkbox" type="checkbox">
+            <label class="task task_label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task task_input">
+            <button class="button button_edit">Save</button>
+            <button class="button button_delete">
+              <img class="button__img" src="./remove.svg" alt="delete-img">
             </button>
           </li>
         </ul>
       </section>
-      <section>
-        <h3 class="h3">Completed</h3>
-        <ul id="completed-tasks">
+      <section class="section">
+        <h3 class="section__h3">Completed</h3>
+        <ul class="ul ul_completed-tasks">
           <li class="li">
-            <input class="checkbox" type="checkbox" checked>
-            <label class="task task-label">See the Doctor</label>
-            <input type="text" class="task">
-            <button class="button edit">Edit</button>
-            <button class="button delete">
-              <img class="delete-img" src="./remove.svg" alt="delete-img">
+            <input class="li__checkbox" type="checkbox" checked>
+            <label class="task task_label">See the Doctor</label>
+            <input type="text" class="task task_input">
+            <button class="button button_edit">Edit</button>
+            <button class="button button_delete">
+              <img class="button__img" src="./remove.svg" alt="delete-img">
             </button>
           </li>
         </ul>
